--- a/Practica/src/pages/styles/extractor.css
+++ b/Practica/src/pages/styles/extractor.css
@@ -6,14 +6,9 @@
   max-width: 100%;
   margin: 0 auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #d4e6f1;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-}
-
-.custom-container:hover {
-  transform: scale(1.02);
 }
 
 .search-container {
@@ -21,6 +16,8 @@
   max-width: 400px;
   margin: 0 auto;
   position: relative;
+  border-radius: 4px;
+  
 }
 
 .data-container,
@@ -41,11 +38,12 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .custom-button:hover {
   background-color: #4a5568;
+  transform: scale(1.05);
 }
 
 .loading,
@@ -73,7 +71,6 @@
   padding: 10px;
   border-bottom: 1px solid #ccc;
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
 }
 
 .user-item:hover {
@@ -88,25 +85,3 @@
   font-weight: bold;
 }
 
-/* Responsive styles */
-@media (max-width: 768px) {
-  .custom-container {
-    padding: 10px;
-  }
-
-  .custom-input {
-    padding: 8px;
-  }
-
-  .custom-button {
-    padding: 8px 16px;
-  }
-
-  .user-item {
-    padding: 8px;
-  }
-
-  .user-details p {
-    font-size: 14px;
-  }
-}
